tests/baselines/reference/cloduleStaticMembers.errors.txt
cloduleStaticMembers.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
cloduleStaticMembers.ts(6,18): error TS2341: Property 'x' is private and only accessible within class 'Clod'.
cloduleStaticMembers.ts(7,13): error TS2304: Cannot find name 'x'.
cloduleStaticMembers.ts(10,13): error TS2304: Cannot find name 'y'.


==== cloduleStaticMembers.ts (4 errors) ====
    class Clod {
        private static x = 10;
        public static y = 10;
    }
    module Clod {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var p = Clod.x;
                     ~
!!! error TS2341: Property 'x' is private and only accessible within class 'Clod'.
        var q = x;
                ~
!!! error TS2304: Cannot find name 'x'.
    
        var s = Clod.y;
        var t = y; 
                ~
!!! error TS2304: Cannot find name 'y'.
    }
    